Added html template and tweaking model

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,18 @@
-Hello
+<html>
+    <head>
+        <title>???</title>
+        <link rel="stylesheet" href="/static/css/main.css">
+        <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
+        
+    </head>
+    <body>
+        <div class="container">
+            <div class="taskbar">
+                <p>Tasks</p>
+            </div>
+            <div class="windows">
+                <p>Window content</p>
+            </div>
+        </div>
+    </body>
+</html>
