--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>???</title>
-        <link rel="stylesheet" href="/static/css/main.css">
+        <link rel="stylesheet" href="/static/cssFiles/main.css">
         <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
     </head>
     <body>
