working on model bugs

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% block body %}
 <div class="content">
-    Home
+    Home<br>
+    {% for task in tasks %}
+        {{task}}<br>
+    {% endfor %}
 </div>
 {% endblock %}
