working on task list generation

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 <div class="content">
     Home<br>
     {% for task in tasks %}
-        {{task}}<br>
+        {{task}}
     {% endfor %}
 </div>
 {% endblock %}
