Moving around nav links

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,8 +18,7 @@
                     <a href="/companies" class="nav_link">Companies</a>
                     <a href="/schedule" class="nav_link">Schedule</a>
                     <a href="/help" class="nav_link">Help</a>
-                    <a href="login" action="/login" class="nav_link">Log-In</a>
-                    <a href="register" action="/register" class="register">Register</a>
+                    <a href="/signout" class="nav_link">Sign out</a>
                 </div>
                 <div class="window_content">
                     {% block body %}
