--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,20 @@
-<form role ="form" method="post" action="/validate">
-        <div>
-            <label for="email">Email address</label>
-            <input type="email" name="email" placeholder="Enter email"><br>
-            <label for"password">Password</label> 
-            <input type="password" name="password" placeholder="Password"><br>
-            <a id="forgot" href="/forgotpassword">Forgot Password?</a>
+<html>
+    <head>
+        <title>???</title>
+        <link rel="stylesheet" href="/static/cssFiles/main.css">
+        <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
+    </head>
+    <body>
+        <div class="container">
+            <form role ="form" method="post" action="/validate">
+                <label for="email">Email address</label>
+                <input type="email" name="email" placeholder="Enter email"><br>
+                <label for"password">Password</label> 
+                <input type="password" name="password" placeholder="Password"><br>
+                <a href="register" action="/register" class="register">New User?</a><br>
+                <a id="forgot" href="/forgotpassword">Forgot Password?</a><br>
+                <button type="submit" value="login" name="btn" class="btn btn-primary" id="submit_button">Submit</button>  
+            </form>
         </div>
-        <button type="submit" value="login" name="btn" class="btn btn-primary" id="submit_button">Submit</button>  
-</form>
+    </body>
+</html>
