--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,20 @@
-<form role ="form" action="/registerUser" method="post">
-        <div>
-            <label for="email">Email address</label>
-            <input type="email" name="email" placeholder="Enter email"><br>
-            <label for"password">Password</label> 
-            <input type="password" name="password" placeholder="Password"><br>
-            <input type="password" name="verify" placeholder="Verify Password"><br> 
+<html>
+    <head>
+        <title>???</title>
+        <link rel="stylesheet" href="/static/cssFiles/main.css">
+        <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
+    </head>
+    <body>
+        <div class="container">
+            <form role ="form" action="/registerUser" method="post">
+                <label for="email">Email address</label>
+                <input type="email" name="email" placeholder="Enter email"><br>
+                <label for"password">Password</label> 
+                <input type="password" name="password" placeholder="Password"><br>
+                <label for"password">Verify Password</label> 
+                <input type="password" name="verify" placeholder="Verify Password"><br> 
+                <button type="submit" value="login" id="submit_button">Submit</button>  
+            </form>
         </div>
-        <button type="submit" value="login" id="submit_button">Submit</button>  
-</form>
+    </body>
+</html>
