fixing nav links

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
             </div>
             <div class="windows">
                 <div class="navbar">
-                    <a href="/home" class="nav_link">Home</a>
+                    <a href="/" class="nav_link">Home</a>
                     <a href="/companies" class="nav_link">Companies</a>
                     <a href="/schedule" class="nav_link">Schedule</a>
                     <a href="/help" class="nav_link">Help</a>
