--- a/static/cssFiles/main.css
+++ b/static/cssFiles/main.css
@@ -1,9 +1,11 @@
 body{
     font-family: futura;
+    width:100%;
+    height:100%;
 }
 
 .taskbar{
-    width: 30%;
+    width: 25%;
     height: 100%;
     float:left;
     background-color: whitesmoke;
@@ -13,18 +15,24 @@ body{
 .windows{
     float:left;
     padding: 10px;
-    width:65%;
+    width:70%;
+    height:100%;
     margin-top: -10px;
 }
 
 .navbar{
     width:100%;
+    height: 5%;
     padding: 30px 10px;
     background-color: gray;
 }
 .window_content{
     background-color: lightblue;
     width:100%;
-    height:100%;
+    height:95%;
+    padding: 10px;
+}
+
+.task{
     padding: 10px;
 }
