working on CRUD handlers, added Notes class for companies

--- a/templates/taskDetails.html
+++ b/templates/taskDetails.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
 <div class="content">
-    Details for task
+    {{task.title}}
 </div>
 {% endblock %}
