Adding content/html extendability to display tasks page

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,9 @@
                     <a href="/schedule" class="nav_link">Schedule</a>
                     <a href="/help" class="nav_link">Help</a>
                     <a href="/signout" class="nav_link">Sign out</a>
+                    <span id="points">
+                        Points: {{user.points}}
+                    </span>
                 </div>
                 <div class="window_content">
                     {% block body %}
