--- a/templates/test.html
+++ b/templates/test.html
@@ -1,1 +1,7 @@
-THIS WORKS!
+{% extends "taskDetails.html" %}
+{% block input %}
+<form>
+    <input type="text"></input><br>
+    <input type="submit" value="submit"></input>
+</form>
+{% endblock %}
