--- a/templates/login.html
+++ b/templates/login.html
@@ -1,10 +1,5 @@
-<html>
-    <head>
-        <title>???</title>
-        <link rel="stylesheet" href="/static/cssFiles/main.css">
-        <script type="text/javascript" src="/static/js/jquery-2.0.3.min.js"></script>
-    </head>
-    <body>
+{% extends "base_alt.html" %}
+{% block body %}
         <div class="container">
             <form role ="form" method="post" action="/validate">
                 <label for="email">Email address</label>
@@ -16,5 +11,5 @@
                 <button type="submit" value="login" name="btn" class="btn btn-primary" id="submit_button">Submit</button>  
             </form>
         </div>
-    </body>
-</html>
+{% endblock %}
+
