--- a/static/cssFiles/main.css
+++ b/static/cssFiles/main.css
@@ -5,7 +5,7 @@ body{
 }
 
 .taskbar{
-    width: 25%;
+    width: 15%;
     height: 100%;
     float:left;
     background-color: whitesmoke;
@@ -32,6 +32,16 @@ body{
     padding: 10px;
 }
 
-.task{
+.task_active{
     padding: 10px;
 }
+
+.task_passive{
+    padding: 10px;
+}
+
+.nav_link{
+    padding: 20px 20px;
+    font-size: 20;
+}
+
