--- a/static/cssFiles/main.css
+++ b/static/cssFiles/main.css
@@ -64,8 +64,7 @@ a{
 }
 
 .task_btn{
-    background-color: rgb(86, 206, 244);
-    background-color: yellow;
+    background-color: rgb(162, 236, 125);
     text-align: center;
     padding: 2px;
     border-radius: 2px;
@@ -124,7 +123,7 @@ a{
 
 #points1{
     padding: 5px 100px 5px 10px;
-    background-color: yellow;
+    background-color: rgb(162, 236, 125);
 }
 
 #points2{
@@ -159,7 +158,7 @@ a{
 
 .header{
     font-size: 25px;
-    background-color: lightblue;
+    background-color: lightyellow;
     padding: 10px 40px 10px 20px;
     box-shadow: 5px 5px 5px lightgray;
 }
